1、修改用户的admin类型字符串； 2、支持部分字段修改；
